@@ -1,3 +1,4 @@
+* Add support for database connection parameters to configuration URI
 * Protect trusted devices against brute force attack
 * Eager load Function field with same multiple getter
 
